--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,26 @@
 version: "3.7"
 services:
-  api:
-    container_name: sentiment-analysis-api
+  server:
+    container_name: sentiment-analysis-server
     build:
-      context: ./api
+      context: ./server
     restart: always
     environment:
       - MODEL_ID=10rThD6G29uwQelsIsX_QqlYBFUZldmxB
     ports:
       - "8000:8000"
-  web:
-    container_name: sentiment-analysis-web
+  client:
+    container_name: sentiment-analysis-client
     build:
-      context: ./web
+      context: ./client
     ports:
       - "3000:3000"
     volumes:
-      - ./web:/home/node/web
-      - /home/node/web/node_modules
-      - /home/node/web/.next
+      - ./client:/home/node/client
+      - /home/node/client/node_modules
+      - /home/node/client/.next
     restart: always
     environment:
       - NEXT_PUBLIC_API_ENDPOINT=http://localhost:8000
     depends_on:
-      - "api"
+      - "server"
